--- a/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
+++ b/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
@@ -42,7 +42,7 @@
 
 |         类型         |           最大限制            |
 |--------------------|-------------------------------------------------------------------------------------|
-| 每个 OBServer 的分区副本数 | 无严格限制 </br>**说明**  </br>每个 OBServer 的分区副本数可根据租户内存大小来预估，1G 内存约支持约 2 万 tablet。 |
+| 每个 OBServer 节点的分区副本数 | 无严格限制 </br>**说明**  </br>每个 OBServer 节点的分区副本数可根据租户内存大小来预估，1G 内存约支持约 2 万 tablet。 |
 
 ## 单个表的限制
 
