--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/11.connect-to-the-oceanbase-database-through-hibernate-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/11.connect-to-the-oceanbase-database-through-hibernate-of-oracle-mode.md
@@ -156,7 +156,7 @@ public class User implements Serializable {
     }
 ```
 
-查看控制台打印出来的所执行 sql 语句以及 oceanbase 数据库中的结果：
+查看控制台打印出来的所执行 sql 语句以及 OceanBase 数据库中的结果：
 
 ![3](https://intranetproxy.alipay.com/skylark/lark/0/2020/png/328295/1600334511137-0b794fa3-7082-40fe-b25a-2c050919ab9e.png)
 
