--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources/1.overview-of-resource-scaling-within-a-tenant.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources/1.overview-of-resource-scaling-within-a-tenant.md
@@ -4,11 +4,11 @@
 
 ## 租户资源的水平管理
 
-租户资源的水平管理是指，通过调整租户资源池的 `UNIT_NUM` 数量，增加或减少集群中为该租户提供服务的 OBServer 的数量，从而改变租户整体的服务能力，资源池的 `UNIT_NUM` 可根据要求动态调大或调小。资源水平管理的详细描述请参见 [租户资源水平扩缩容](../2.scale-in-and-scale-out-of-tenant-resources/2.horizontal-scaling-of-tenant-resources.md)。
+租户资源的水平管理是指，通过调整租户资源池的 `UNIT_NUM` 数量，增加或减少集群中为该租户提供服务的节点的数量，从而改变租户整体的服务能力，资源池的 `UNIT_NUM` 可根据要求动态调大或调小。资源水平管理的详细描述请参见 [租户资源水平扩缩容](../2.scale-in-and-scale-out-of-tenant-resources/2.horizontal-scaling-of-tenant-resources.md)。
 
 ## 租户资源的垂直管理
 
-租户资源的垂直管理是指，通过调整租户内每个资源单元的资源大小，改变租户在各 OBServer 上的服务能力，进而改变租户整体的服务能力。改变租户资源单元的资源大小有以下两种手段：
+租户资源的垂直管理是指，通过调整租户内每个资源单元的资源大小，改变租户在各节点上的服务能力，进而改变租户整体的服务能力。改变租户资源单元的资源大小有以下两种手段：
 
 * 给资源单元（Unit）切换新的资源规格（unit_config）
 
