--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/1.overview-of-obproxy-management.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/1.overview-of-obproxy-management.md
@@ -1,16 +1,16 @@
 # OBProxy 管理概述
 
-OceanBase Database Proxy（简称 ODP）是 OceanBase 数据库专用的代理服务器。OceanBase 数据库的用户数据以多副本的形式存放在各个 OBServer 上，ODP 接收用户发出的 SQL 请求，并将 SQL 请求转发至最佳目标 OBServer，最后将执行结果返回给用户。
+OceanBase Database Proxy（简称 ODP）是 OceanBase 数据库专用的代理服务器。OceanBase 数据库的用户数据以多副本的形式存放在各个 OBServer 节点上，ODP 接收用户发出的 SQL 请求，并将 SQL 请求转发至最佳目标 OBServer，最后将执行结果返回给用户。
 
 ## OBProxy 概述
 
-OceanBase 数据库与传统单机数据库不同，OceanBase 数据库是分布式数据库，每个表甚至每个表的不同分区都可能存放在不同的机器上。想要对表进行读写，必须先要定位到数据所属的表或是分区的主副本位置，然后才能执行相应的 SQL 语句，这在应用层面而言是几乎不可能做到的。OBProxy 作为 OceanBase 数据库专用的反向代理软件，其核心功能是路由，将客户端发起的数据访问请求转发到正确的 OBServer 上，并将 OBServer 的响应结果转发给客户端。
+OceanBase 数据库与传统单机数据库不同，OceanBase 数据库是分布式数据库，每个表甚至每个表的不同分区都可能存放在不同的机器上。想要对表进行读写，必须先要定位到数据所属的表或是分区的主副本位置，然后才能执行相应的 SQL 语句，这在应用层面而言是几乎不可能做到的。OBProxy 作为 OceanBase 数据库专用的反向代理软件，其核心功能是路由，将客户端发起的数据访问请求转发到正确的 OBServer 节点上，并将 OBServer 节点的响应结果转发给客户端。
 
 客户端通过 OBProxy 访问 OceanBase 数据库的数据链路如下图所示。
 
 ![obproxy](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/8807351461/p374522.jpg)
 
-用户通过任意 Client 驱动发出请求，请求通过负载均衡组件访问到任意一台无状态的 OBProxy 上，然后 OBProxy 再将用户请求转发到后端 OceanBase 集群中最佳的 OBServer 上去执行。
+用户通过任意 Client 驱动发出请求，请求通过负载均衡组件访问到任意一台无状态的 OBProxy 上，然后 OBProxy 再将用户请求转发到后端 OceanBase 集群中最佳的 OBServer 节点上去执行。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
@@ -24,9 +24,9 @@ OceanBase 数据库与传统单机数据库不同，OceanBase 数据库是分布
     </ul>
   </main>
 
-每个 OBServer 均包含完整的 SQL 引擎和存储引擎，用来负责解析用户 SQL 以生成物理执行计划并执行。分布式的 OBServer 之间通过 Paxos 协议以保证高可用性。这种架构设计中，OBProxy 只承担基本的路由和容灾功能，而数据库的功能全部交由 OBServer 实现。这样更加简单明确的分工可以将各组件性能做得更加极致，OceanBase 数据库整体最高也能做到近似访问单机数据库的性能。
+每个 OBServer 节点均包含完整的 SQL 引擎和存储引擎，用来负责解析用户 SQL 以生成物理执行计划并执行。分布式的 OBServer 节点之间通过 Paxos 协议以保证高可用性。这种架构设计中，OBProxy 只承担基本的路由和容灾功能，而数据库的功能全部交由 OBServer 节点实现。这样更加简单明确的分工可以将各组件性能做得更加极致，OceanBase 数据库整体最高也能做到近似访问单机数据库的性能。
 
-OBProxy 支持将请求正确发送至主副本，并且通过特定配置还支持读写分离和备优先读等场景。另外在 OBServer 节点发生宕机、升级或合并等状态时，可以通过 [黑名单机制](../7.route-management/4.odp-routing-policy/3.blacklist-mechanism.md) 确保用户请求可以被路由至状态正常的 OBServer 上。
+OBProxy 支持将请求正确发送至主副本，并且通过特定配置还支持读写分离和备优先读等场景。另外在 OBServer 节点发生宕机、升级或合并等状态时，可以通过 [黑名单机制](../7.route-management/4.odp-routing-policy/3.blacklist-mechanism.md) 确保用户请求可以被路由至状态正常的 OBServer 节点上。
 
 ## 管理 OBProxy
 
