--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/2.start-obproxy.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/2.start-obproxy.md
@@ -44,7 +44,7 @@ OBProxy 部署成功后，可以通过命令启动单个 obproxy 进程。
 
       * `-p` 用于指定 OBProxy 监听的端口号，客户端通过 MySQL 连接该端口访问 OceanBase 数据库。仅在第一次启动时需要指定该参数，后续续日常启动或升级等均不需要添加此参数。
 
-      * `-r'ip:port'`：指定的 OceanBase 集群的 RootServer 信息，包括 IP 地址和端口号信息。该 Port 指的是 OBServer 的 SQL Port，不是 RPC Port。
+      * `-r'ip:port'`：指定的 OceanBase 集群的 Root Server 信息，包括 IP 地址和端口号信息。该 Port 指的是 OBServer 节点的 SQL Port，不是 RPC Port。
 
       * `-e` 用于指定的建表操作，建议仅在 OBProxy 第一次启动时进行，后续日常启动或升级等均不需要添加此参数。
 
