--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/5.logical-connection/3.displays-session-statistics.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/5.logical-connection/3.displays-session-statistics.md
@@ -221,22 +221,22 @@ obclient> SHOW PROXYSESSION STAT 2147549231 like "%time%";
 | total_transaction_count              | 事务总数                               |
 | client_request_total_size            | 请求数据量总大小                           |
 | client_response_total_size           | 返回数据量总大小                           |
-| server_request_total_size            | 发送给 OBServer 的请求数据量总大小             |
-| server_response_total_size           | OBServer 返回的数据量总大小                 |
+| server_request_total_size            | 发送给 OBServer 节点的请求数据量总大小             |
+| server_response_total_size           | OBServer 节点返回的数据量总大小                 |
 | total_transactions_time              | 事务执行总耗时                            |
 | total_client_request_read_time       | 客户端请求读取总时间                         |
 | total_client_response_write_time     | 返回客户端数据发送总时间                       |
 | total_client_request_analyze_time    | 解析客户端报文的总时间                        |
 | total_server_process_request_time    | 数据库处理请求总时间                         |
-| total_server_response_read_time      | 读取 OBServer 返回数据总时间                |
-| total_send_saved_login_time          | 发送给 OBServer  LOGIN 报文的总时间         |
-| total_send_all_session_vars_time     | 发送给 OBServer  Session 变量同步总时间      |
-| total_send_use_database_time         | 发送给 OBServer  use database 命令总时间   |
-| total_send_changed_session_vars_time | 发送给 OBServer  Session 变量修改总时间      |
-| total_send_last_insert_id_time       | 发送给 OBServer  last_insert_id 同步总时间 |
-| total_send_start_trans_time          | 发送给 OBServer  开启事务同步总时间            |
+| total_server_response_read_time      | 读取 OBServer 节点返回数据总时间                |
+| total_send_saved_login_time          | 发送给 OBServer 节点 LOGIN 报文的总时间         |
+| total_send_all_session_vars_time     | 发送给 OBServer 节点 Session 变量同步总时间      |
+| total_send_use_database_time         | 发送给 OBServer 节点 use database 命令总时间   |
+| total_send_changed_session_vars_time | 发送给 OBServer 节点 Session 变量修改总时间      |
+| total_send_last_insert_id_time       | 发送给 OBServer 节点 last_insert_id 同步总时间 |
+| total_send_start_trans_time          | 发送给 OBServer  节点开启事务同步总时间            |
 | total_pl_lookup_time                 | 路由总时间                              |
-| total_server_connect_time            | ODP 和 OBServer 建立连接的总时间            |
+| total_server_connect_time            | ODP 和 OBServer 节点建立连接的总时间            |
 | client_requests                      | 总请求数                               |
 | client_large_requests                | 大请求数                               |
 | client_internal_requests             | 内部请求数                              |
@@ -276,22 +276,22 @@ obclient> SHOW PROXYSESSION STAT 2147549231 like "%time%";
 | server_speed_bytes_per_sec_1M        | 每秒的响应速度在 \[100K,1M) 之间的数量          |
 | server_speed_bytes_per_sec_10M       | 每秒的响应速度在 \[1M,10M） 之间的数量           |
 | server_speed_bytes_per_sec_100M      | 每秒的响应速度在 \[10 M,+∞) 之间的数量          |
-| server_connect_count                 | 连接 OBServer 总次数                    |
-| server_connect_retries               | 连接 OBServer 重试总次数                  |
+| server_connect_count                 | 连接 OBServer 节点的总次数                    |
+| server_connect_retries               | 连接 OBServer 节点的重试总次数                  |
 | server_pl_lookup_count               | 路由总次数                              |
 | server_pl_lookup_retries             | 路由重试总次数                            |
-| broken_server_connections            | 和 OBServer 断连总次数                   |
-| server_requests                      | 向 OBServer 发送请求总次数                 |
-| server_responses                     | 收到 OBServer 响应总次数                  |
-| server_error_responses               | 收到 OBServer  ERROR 类型响应总次数         |
-| server_resultset_responses           | 收到 OBServer  resultset 类型响应总次数     |
-| server_ok_responses                  | 收到 OBServer  OK 类型响应总次数            |
-| server_other_responses               | 收到 OBServer  其它类型响应总次数             |
-| send_saved_login_requests            | 发送给 OBServer  LOGIN 报文总次数          |
-| send_all_session_vars_requests       | 发送给 OBServer  全量 Session 变量同步总次数   |
-| send_use_database_requests           | 发送给 OBServer  use database 总次数     |
-| send_changed_session_vars_requests   | 发送给 OBServer  部分 Session 变量总次数     |
-| send_last_insert_id_requests         | 发送给 OBServer  last insert id 总次数   |
-| send_start_trans_requests            | 发送给 OBServer  开启事务总次数              |
+| broken_server_connections            | 和 OBServer 节点断连总次数                   |
+| server_requests                      | 向 OBServer 节点发送请求总次数                 |
+| server_responses                     | 收到 OBServer 节点响应总次数                  |
+| server_error_responses               | 收到 OBServer 节点 ERROR 类型响应总次数         |
+| server_resultset_responses           | 收到 OBServer 节点 resultset 类型响应总次数     |
+| server_ok_responses                  | 收到 OBServer 节点 OK 类型响应总次数            |
+| server_other_responses               | 收到 OBServer 节点 其它类型响应总次数             |
+| send_saved_login_requests            | 发送给 OBServer 节点 LOGIN 报文总次数          |
+| send_all_session_vars_requests       | 发送给 OBServer 节点 全量 Session 变量同步总次数   |
+| send_use_database_requests           | 发送给 OBServer 节点 use database 总次数     |
+| send_changed_session_vars_requests   | 发送给 OBServer 节点部分 Session 变量总次数     |
+| send_last_insert_id_requests         | 发送给 OBServer 节点 last insert id 总次数   |
+| send_start_trans_requests            | 发送给 OBServer 节点开启事务总次数              |
 | vip_to_tenant_cache_hit              | 公有云上 VIP 信息查询命中次数                  |
 | vip_to_tenant_cache_miss             | 公有云上 VIP 信息查询未命中次数                 |
