--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/3.ldc-route.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/3.ldc-route.md
@@ -53,7 +53,7 @@ LDC 路由的设置需要进行以下 3 个步骤：
 
    * 一个 OceanBase 集群中有若干个 Region，一个 Region 有若干个 Zone，一个 Zone 对应一个 IDC 属性。
 
-3. 检查 OBServer 中 LDC 设置内容是否生效。
+3. 检查 OBServer 节点中 LDC 设置内容是否生效。
 
    查询语句如下所示，查看返回结果中对应 Zone 的 Region 和 IDC 字段的值是否符合您的设置值。
 
