--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/3.stop-or-start-observer.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/3.stop-or-start-observer.md
@@ -1,10 +1,10 @@
-# 停止或启动 OBServer
+# 停止或启动节点
 
-您可以根据数据库的运行情况，启动或停止 OBServer 的运行。
+您可以根据数据库的运行情况，启动或停止节点的运行。
 
-## 通过 SQL 语句停止 OBServer
+## 停止节点
 
-停止 OBServer 主要包含以下 2 个 操作：
+停止节点主要包含以下 2 个 操作：
 
 * 停止节点服务，即 Stop Server 操作
 
@@ -12,9 +12,9 @@
 
 ### 停止节点服务
 
-您可以通过对 OBServer 执行 Stop Server 操作来停止节点服务。Stop Server 操作的目的是将该 OBServer 上的分区 Leader 切到其他节点。当该 OBServer 上没有分区 Leader 的情况下，系统将内部标记 OBServer 为 `stop` 状态，客户端请求不会再次发送到该 OBServer，该 OBServer 也不会再对外提供服务。
+您可以通过对节点执行 Stop Server 操作来停止节点服务。Stop Server 操作的目的是将该节点上的分区 Leader 切到其他节点。当该节点上没有分区 Leader 的情况下，系统将内部标记节点为 `stop` 状态，客户端请求不会再次发送到该 OBServer，该节点也不会再对外提供服务。
 
-关于 OBServer 状态的更多说明请参见 [查看 OBServer 状态](../5.manage-observer/2.view-observer-status.md)。
+关于节点状态的更多说明请参见 [查看节点状态](../5.manage-observer/2.view-observer-status.md)。
 
 Stop Server 操作通常是特殊运维操作时执行，例如机器硬件维修、替换和升级，或者对该 Server 进行诊断等而进行的动作。
 
@@ -55,9 +55,9 @@ obclient> ALTER SYSTEM STOP SERVER 'ip:port' [,'ip:port'...] [ZONE='zone'];
   2 rows in set
   ```
 
-* 执行 Stop Server 操作后，`oceanbase.DBA_OB_SERVERS` 视图中该 Server 的 `status` 字段仍为 `Active` 不变，但 `stop_time` 字段的值由 `NULL` 变为 Stop Server 的时间点，同时 OBServer 处于 `stop` 状态。
+* 执行 Stop Server 操作后，`oceanbase.DBA_OB_SERVERS` 视图中该 Server 的 `status` 字段仍为 `Active` 不变，但 `stop_time` 字段的值由 `NULL` 变为 Stop Server 的时间点，同时节点处于 `stop` 状态。
 
-  更多 OBServer 状态的介绍和查看相关操作请参见 [查看 OBServer 状态](../5.manage-observer/2.view-observer-status.md)。
+  更多节点状态的介绍和查看相关操作请参见 [查看节点状态](../5.manage-observer/2.view-observer-status.md)。
   
 示例：
 
@@ -69,7 +69,7 @@ obclient> ALTER SYSTEM STOP SERVER 'ip:port' [,'ip:port'...] [ZONE='zone'];
    obclient> ALTER SYSTEM STOP SERVER "10.10.10.1:2882" zone='z1';
    ```
 
-   停止节点服务后，如果该节点上有主副本，则系统会自动切换为备副本，且节点的备副本依然可以参与投票，但不会当选为主副本。节点服务停止与 OBServer 宕机性质不同，节点停止服务的时间可以超出配置项 `server_permanent_offline_time` 指定的永久下线时间且不会导致节点真的下线。
+   停止节点服务后，如果该节点上有主副本，则系统会自动切换为备副本，且节点的备副本依然可以参与投票，但不会当选为主副本。节点服务停止与节点宕机性质不同，节点停止服务的时间可以超出配置项 `server_permanent_offline_time` 指定的永久下线时间且不会导致节点真的下线。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
@@ -78,7 +78,7 @@ obclient> ALTER SYSTEM STOP SERVER 'ip:port' [,'ip:port'...] [ZONE='zone'];
 
 ### 停止 observer 进程
 
-1. 使用 `admin` 用户登录 OBServer 所在的机器。
+1. 使用 `admin` 用户登录节点所在的机器。
 
 2. 通过命令行工具进入 `/home/admin/oceanbase/bin` 目录。
 
@@ -97,9 +97,9 @@ obclient> ALTER SYSTEM STOP SERVER 'ip:port' [,'ip:port'...] [ZONE='zone'];
    如果命令执行后没有返回信息，则表示进程停止成功。
 
 
-## 通过 SQL 语句启动 OBServer
+## 启动节点
 
-启动 OBServer 主要包含以下 2 个操作：
+启动节点主要包含以下 2 个操作：
 
 * 启动 observer 进程
 
@@ -109,7 +109,7 @@ obclient> ALTER SYSTEM STOP SERVER 'ip:port' [,'ip:port'...] [ZONE='zone'];
 
 某些特殊情况下，您可以通过命令启动 observer 进程。
 
-1. 使用 `admin` 用户登录 OBServer 所在的机器。
+1. 使用 `admin` 用户登录节点所在的机器。
 
 2. 通过命令行工具进入 `/home/admin/oceanbase/bin` 目录。
 
@@ -121,7 +121,7 @@ obclient> ALTER SYSTEM STOP SERVER 'ip:port' [,'ip:port'...] [ZONE='zone'];
    ./bin/observer [启动参数]
    ```
 
-   通常仅在第一次启动时，需要添加启动参数，其他时候启动时，可直接使用 `./bin/observer` 命令启动 observer 进程。同时，您还可以运行 `./bin/observer --help` 查看 observer 启动参数的详细信息。
+   通常仅在第一次启动时，需要添加启动参数，其他时候启动时，可直接使用 `./bin/observer` 命令启动 observer 进程。同时，您还可以运行 `./bin/observer --help` 查看 observer 进程启动参数的详细信息。
 
    第一次启动 observer 进程的命令示例如下：
 
@@ -137,11 +137,11 @@ obclient> ALTER SYSTEM STOP SERVER 'ip:port' [,'ip:port'...] [ZONE='zone'];
 
    * `-P` 用于指定 RPC 端口号，本示例中为 `2882`。
 
-   * `-z` 用于指定待启动的 OBServer 所在的 Zone，本示例中为 `zone_1`。
+   * `-z` 用于指定待启动的节点所在的 Zone，本示例中为 `zone_1`。
 
    * `-d` 用于指定数据盘的存储目录，本示例中为 `/data/1/prod_data`。
 
-   * `-r` 用于指定待启动的 OBServer 的 IP 地址列表。
+   * `-r` 用于指定待启动的节点的 IP 地址列表。
 
    * `-l`：用于指定日志的级别，本示例中为 `WARN`，表示日志级别为 WARNING 级别。
 
@@ -186,7 +186,7 @@ obclient> ALTER SYSTEM STOP SERVER 'ip:port' [,'ip:port'...] [ZONE='zone'];
 
 ### 启动节点服务
 
-一般情况下，您可以通过 Start Server 操作来启动节点服务。Start Server 操作对应 Stop Server 操作。集群中的 OBServer 启动后，通常默认状态为 `started`。如果执行过 Stop Server 操作，则需要通过 Start Server 操作将 Server 状态置为 `started`。
+一般情况下，您可以通过 Start Server 操作来启动节点服务。Start Server 操作对应 Stop Server 操作。集群中的节点启动后，通常默认状态为 `started`。如果执行过 Stop Server 操作，则需要通过 Start Server 操作将 Server 状态置为 `started`。
 
 启动节点服务的语句如下：
 
@@ -232,9 +232,9 @@ obclient> ALTER SYSTEM START SERVER 'ip:port' [,'ip:port'...] [ZONE='zone'];
 
    * `status`：表示节点服务的状态，一般有以下几种状态：
 
-     * `active`：表示该 OBServer 节点为正常状态。
+     * `active`：表示该节点为正常状态。
 
-     * `inactive`：表示该 OBServer 节点为下线状态，集群升级过程中该值为 `inactive`。
+     * `inactive`：表示该节点为下线状态，集群升级过程中该值为 `inactive`。
 
    * `start_service_time`：表示节点启动服务的时间。如果该值是 `NULL`；则表示该节点的服务还没有启动。
 
