--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/1.configuration-management-introduction.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/1.configuration-management-introduction.md
@@ -4,7 +4,7 @@ OceanBase 数据库通过设置配置项和系统变量来完成配置管理。
 
 ## 配置项
 
-配置项主要用于运维，常用于控制机器及其以上级别的系统行为。可以作为 OBServer 启动参数和租户创建参数，也可以在 OBServer 运行时进行修改以调整系统行为。
+配置项主要用于运维，常用于控制机器及其以上级别的系统行为。可以作为节点启动参数和租户创建参数，也可以在节点运行时进行修改以调整系统行为。
 有关配置项的详细介绍请参见 [设置参数](../2.configuration-management/2.set-parameters.md)。
 
 ## 系统变量
