--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/3.blacklist-mechanism.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/3.blacklist-mechanism.md
@@ -1,6 +1,6 @@
 # 黑名单机制
 
-OBProxy 使用黑名单机制自适应处理 OBServer 错峰合并、升级、leader 切换、宕机、启动和停止等过程中的 OBServer 访问控制。
+OBProxy 使用黑名单机制自适应处理 OBServer 节点的错峰合并、升级、leader 切换、宕机、启动和停止等过程中的 OBServer 节点访问控制。
 
 ## 背景信息
 
@@ -10,47 +10,47 @@ OBProxy 有宕机黑名单和活着不可用黑名单两种类型，可通过设
 
 * 错峰合并时正在合并的 Zone 没有流量。
 
-* 集群升级时不能访问正在升级的 OBServer 或 Zone。
+* 集群升级时不能访问正在升级的 OBServer 节点或 Zone。
 
-* OBServer 宕机后，不再访问该 OBServer。
+* OBServer 节点宕机后，不再访问该 OBServer 节点。
 
-* Partition 迁移后，不再访问迁移前的 OBServer。
+* Partition 迁移后，不再访问迁移前的 OBServer 节点。
 
-* 访问的 OBServer 不存在租户资源时重试。
+* 访问的 OBServer 节点不存在租户资源时重试。
 
-* OBServer 活着不可用（内存超限、超时、OBServer 初始化和退出）时重试。
+* OBServer 节点活着不可用（内存超限、超时、OBServer 节点初始化和退出）时重试。
 
 ## 宕机黑名单
 
-一旦检测到某台 OBServer 宕机或者因手工执行 `stop server` 命令使得该 OBServer 节点暂停对外提供服务时，则把这台 OBServer 加入宕机黑名单。这使得该应用不再访问该 OBServer，直到再次检测发现节点状态恢复正常时才会从黑名单中放出。
+一旦检测到某台 OBServer 节点宕机或者因手工执行 `stop server` 命令使得该 OBServer 节点暂停对外提供服务时，则把这个 OBServer 节点加入宕机黑名单。这使得该应用不再访问该节点，直到再次检测发现节点状态恢复正常时才会从黑名单中放出。
 
 当 OBServer 节点状态是以下两种状态之一时，该 Server 被加入宕机黑名单：
 
-* 所在 OBServer 的 `start_service_time` 项值为 0。
+* 所在 OBServer 节点的 `start_service_time` 项值为 0。
 
-* 所在 OBServer 的 `status` 项值为 inactive。
+* 所在 OBServer 节点的 `status` 项值为 `inactive`。
 
 ## 活着不可用黑名单
 
-活着不可用黑名单与宕机黑名单的区别在于，OBServer 的状态是暂时的或不确定的，所以每隔一段时间会进行重试，如果重试发现该 OBServer 恢复正常了，则将该 OBServer 放出黑名单。
+活着不可用黑名单与宕机黑名单的区别在于，OBServer 节点的状态是暂时的或不确定的，所以每隔一段时间会进行重试，如果重试发现该 OBServer 节点恢复正常了，则将该 OBServer 节点放出黑名单。
 
-当 OBServer 节点状态处于以下状态之一时，该 OBServer 被加入活着不可用黑名单：
+当 OBServer 节点状态处于以下状态之一时，该 OBServer 节点被加入活着不可用黑名单：
 
 * 所在 Zone 正在做合并/升级。
 
 * 所在的 Server 正在做合并/升级。
 
-* OBServer 活着时的任何错误都会通过错误包形式返回，如果 OBServer 返回系统错误，比如：资源限制、连接数限制、系统内存超限、数据包校验出错、正在初始化、正在退出、OBServer response 超时、client connect 超时或者 OBProxy 等待超时等，该 OBServer 的活着不可用的计数加 1。如果 OBServer 在 N 秒内有 M 次活着不可用的失败计数，则将该 OBServer 加入活着不可用黑名单。
+* OBServer 节点活着时的任何错误都会通过错误包形式返回，如果 OBServer 节点返回系统错误，比如：资源限制、连接数限制、系统内存超限、数据包校验出错、正在初始化、正在退出、OBServer 节点 response 超时、client connect 超时或者 OBProxy 等待超时等，该 OBServer 节点的活着不可用的计数加 1。如果 OBServer 节点在 N 秒内有 M 次活着不可用的失败计数，则将该 OBServer 节点加入活着不可用黑名单。
 
-* 错峰合并开始时，Root Service 会先更新内部表设置 Zone 的合并状态，然后将需要合并的 Zone 上的主都切换到其它的 Zone。OBProxy 周期性更新 Zone 状态表获取 Zone 状态，Zone 状态更新后，该 Zone 里的 OBServer 都会设置为活着不可用。在错峰合并过程中，正在合并的 Zone 的 OBServer 都处于活着不可用黑名单。
+* 错峰合并开始时，Root Service 会先更新内部表设置 Zone 的合并状态，然后将需要合并的 Zone 上的主都切换到其它的 Zone。OBProxy 周期性更新 Zone 状态表获取 Zone 状态，Zone 状态更新后，该 Zone 里的 OBServer 节点都会设置为活着不可用。在错峰合并过程中，正在合并的 Zone 的 OBServer 节点都处于活着不可用黑名单。
 
 ## 黑名单优先级
 
-宕机黑名单 \> 活着不可用黑名单（ Zone 合并/升级 \> OBServer 合并/升级 ）。
+宕机黑名单 \> 活着不可用黑名单（ Zone 合并/升级 \> OBServer 节点合并/升级 ）。
 
 ## 强制访问黑名单中的 OBServer
 
-所有可选择的 OBServer 都处于黑名单中时，会强制重试黑名单中的 OBServer。
+所有可选择的 OBServer 节点都处于黑名单中时，会强制重试黑名单中的 OBServer 节点。
 
 ## 黑名单的配置参数
 
@@ -69,8 +69,8 @@ OBProxy 有宕机黑名单和活着不可用黑名单两种类型，可通过设
    |            **配置项**            |           **描述**           |
    |-------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------|
    | enable_congestion             | 是否启用黑名单机制。默认开启，在黑名单机制运行出问题时，可以暂时关闭这个选项让 OBProxy 能够正常工作。      |
-   | congestion_failure_threshold  | 设置当 OBServer 在 N 秒内出错几次则将该 Server 加入黑名单。该参数值小于 0 时，则所有在黑名单中的 Server 都会被放出黑名单。 |
-   | congestion_fail_window        | 设置错误统计周期的时间（秒）。默认值 120 秒，如果在这个错误统计周期中错误次数超过了 `congestion_failure_threshold` 的值，则将该 OBServer 加入黑名单。该参数值也可以动态调整，一旦修改了该参数，当前错误统计计数会被清零，将重新按新的 fail window 从头开始统计错误次数。 |
+   | congestion_failure_threshold  | 设置当 OBServer 节点在 N 秒内出错几次则将该 Server 节点加入黑名单。该参数值小于 0 时，则所有在黑名单中的 Server 都会被放出黑名单。 |
+   | congestion_fail_window        | 设置错误统计周期的时间（秒）。默认值 120 秒，如果在这个错误统计周期中错误次数超过了 `congestion_failure_threshold` 的值，则将该 Server 节点加入黑名单。该参数值也可以动态调整，一旦修改了该参数，当前错误统计计数会被清零，将重新按新的 fail window 从头开始统计错误次数。 |
    | congestion_retry_interval     | 设置被加入活着不可用黑名单的 Server 的重试周期，默认值 20 秒。       |
    | min_keep_congestion_interval  | 设置被加入黑名单的 Server，多长时间后才允许被放出黑名单。            |
    | min_congested_connect_timeout | 设置客户端连接超时的值，当连接超时时则将 Server 加入活着不可用黑名单，默认值为10 s。           |
@@ -81,11 +81,11 @@ OBProxy 有宕机黑名单和活着不可用黑名单两种类型，可通过设
 
 * 不指定可选项时，可显示所有 cluster 的黑名单信息。
 
-* 仅指定 `all` 时，可显示所有 cluster 的 OBServer 信息（包括黑名单中和非黑名单中的 OBServer 信息）。
+* 仅指定 `all` 时，可显示所有 cluster 的 OBServer 节点信息（包括黑名单中和非黑名单中的 Server 信息）。
 
 * 仅指定 `clustername` 时，可显示指定 cluster 的黑名单信息。
 
-* 同时指定 `all` 和 `clustername` 时，可显示指定 cluster 的 OBServer 信息。
+* 同时指定 `all` 和 `clustername` 时，可显示指定 cluster 的 OBServer 节点信息。
 
 示例如下：
 
@@ -251,7 +251,7 @@ alive_failure_events: 0
     <h4>说明</h4>
     <ul>
     <li>
-    <p>当 <code>dead_congested</code>、<code>alive_congested</code>、<code>is_zone_upgrading</code>、<code>is_zone_merging</code>、<code>is_server_upgrading</code> 中的任意一个状态为 true 时，表示该 OBServer 已加入黑名单。</p>
+    <p>当 <code>dead_congested</code>、<code>alive_congested</code>、<code>is_zone_upgrading</code>、<code>is_zone_merging</code>、<code>is_server_upgrading</code> 中的任意一个状态为 true 时，表示该 OBServer 节点已加入黑名单。</p>
     </li>
     <li>
     <p>OBProxy 1.1.2 版本之前， clustername 不需要单引号或者双引号引起来，1.1.2 版本及之后，必须要用单引号或者双引号引起来。</p>
