--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/2.view-observer-status.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/2.view-observer-status.md
@@ -1,10 +1,10 @@
-# 查看 OBServer 状态
+# 查看节点状态
 
-您可以通过命令来查看 OBServer 的状态。
+您可以通过命令来查看节点的状态。
 
-## 通过视图查看 OBServer 的状态
+## 通过视图查看节点的状态
 
-您可以通过查询视图 `oceanbase.DBA_OB_SERVERS` 来查看 OBServer 的状态。
+您可以通过查询视图 `oceanbase.DBA_OB_SERVERS` 来查看节点的状态。
 
 1. 使用 `root` 用户登录到数据库的 `sys` 租户。
 
@@ -14,17 +14,17 @@
    obclient> USE oceanbase
    ```
 
-3. 执行以下语句，查看 OBServer 的状态。
+3. 执行以下语句，查看节点的状态。
 
-   `oceanbase.DBA_OB_SERVERS` 视图中同时通过 `stop_time` 和 `status` 两个字段来标识 OBserver 的状态：
+   `oceanbase.DBA_OB_SERVERS` 视图中同时通过 `stop_time` 和 `status` 两个字段来标识节点的状态：
 
-   * `stop_time` 为 `NULL` 时，表示 OBServer 为 `started` 状态；`stop_time` 不为 `NULL` 时， 表示 OBServer 处于`stopped` 状态，且此时 `stop_time` 的值为 OBServer 被 Stop 的时间戳。
+   * `stop_time` 为 `NULL` 时，表示节点为 `started` 状态；`stop_time` 不为 `NULL` 时， 表示节点处于`stopped` 状态，且此时 `stop_time` 的值为节点被 Stop 的时间戳。
 
    * `status` 有以下 2 种状态：
 
-     * `active`：表示该 OBServer 为正常状态。
+     * `active`：表示该节点为正常状态。
 
-     * `inactive`：表示该 OBServer 为下线状态。
+     * `inactive`：表示该节点为下线状态。
 
    查询示例如下：
 
