--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/5.isolate-faulty-observer.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/5.isolate-faulty-observer.md
@@ -1,9 +1,10 @@
-# 隔离故障的 OBServer
+# 隔离故障的节点
 
-当 OBServer 发生故障时，您可以隔离故障 OBServer。隔离后，新的读写请求不会路由到该故障的 OBServer 上。
-当 OBServer 故障后，您可以通过隔离操作将故障 OBServer 上的 Leader 切换到其他 OBServer 上，以此尝试恢复用户的写服务和日志同步。待集群恢复正常后，再尝试通过 `STOP SERVER` 命令停止 OBServer 的服务后，重启该故障的 OBServer 来解决问题。
+当节点发生故障时，您可以隔离故障 OBServer。隔离后，新的读写请求不会路由到该故障的节点上。
 
-隔离故障 OBServer 的 SQL 语句如下：
+当节点故障后，您可以通过隔离操作将故障节点上的 Leader 切换到其他节点上，以此尝试恢复用户的写服务和日志同步。待集群恢复正常后，再尝试通过 `STOP SERVER` 命令停止节点的服务后，重启该故障的节点来解决问题。
+
+隔离故障节点的 SQL 语句如下：
 
 ```sql
 ALTER SYSTEM ISOLATE SERVER 'ip:port' [,'ip:port'...] [ZONE [=] 'zone']
@@ -23,7 +24,7 @@ ALTER SYSTEM ISOLATE SERVER 'ip:port' [,'ip:port'...] [ZONE [=] 'zone']
    obclient> ALTER SYSTEM ISOLATE SERVER '10.10.10.10:2882' ZONE='zone1';
    ```
 
-   SQL 语句执行成功，则表示隔离故障 OBServer 的操作执行成功。同时，可以看到 `oceanbase.DBA_OB_SERVERS` 视图中 `status` 字段仍然为 `active`，但是该 OBServer 对应的 `stop_time` 字段不为 `NULL`，表示该 OBServer 处于`stop` 状态，且此时 `stop_time` 对应的值为该 OBServer 被执行故障隔离的时间戳。
+   SQL 语句执行成功，则表示隔离故障节点的操作执行成功。同时，可以看到 `oceanbase.DBA_OB_SERVERS` 视图中 `status` 字段仍然为 `active`，但是该节点对应的 `stop_time` 字段不为 `NULL`，表示该节点处于`stop` 状态，且此时 `stop_time` 对应的值为该节点被执行故障隔离的时间戳。
 
    查看 `oceanbase.DBA_OB_SERVERS` 视图的示例如下：
 
@@ -47,4 +48,4 @@ ALTER SYSTEM ISOLATE SERVER 'ip:port' [,'ip:port'...] [ZONE [=] 'zone']
 
    `oceanbase.DBA_OB_SERVERS` 视图中各字段的详细说明，请参见 [DBA_OB_SERVERS](../../../../5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/50.oceanbase-dba_ob_servers-of-mysql-mode.md)。
 
-隔离故障的 OBServer 后，如果需要解除隔离状态，您可以通过执行 `ALTER SYSTEM START SERVER '10.10.10.10:2882'` 命令来完成。
+隔离故障的节点后，如果需要解除隔离状态，您可以通过执行 `ALTER SYSTEM START SERVER '10.10.10.10:2882'` 命令来完成。
