--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/7.replace-observer.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/7.replace-observer.md
@@ -1,6 +1,6 @@
-# 替换 OBServer
+# 替换节点
 
-OCP 提供了替换 OBServer 节点的功能。集群节点的替换操作常用于替换掉损坏节点。替换后集群的节点数量不变。替换过程需要涉及节点的 Stop Server 操作和 Add Server 操作，整体时间比较长。
+OCP 提供了替换节点的功能。集群节点的替换操作常用于替换掉损坏节点。替换后集群的节点数量不变。替换过程需要涉及节点的 Stop Server 操作和 Add Server 操作，整体时间比较长。
 
 ## 前提条件
 
@@ -8,7 +8,7 @@ OCP 提供了替换 OBServer 节点的功能。集群节点的替换操作常用
 
   如果不能在当前 OCP 中管理，请参考 OCP 对应版本的《用户指南》文档将您的 OceanBase 集群接管到当前 OCP 中。
   
-* 替换 OBServer 前，请确认当前登录用户已具备集群的管理权限。
+* 替换节点前，请确认当前登录用户已具备集群的管理权限。
 
   如果当前用户没有集群管理的权限，请联系管理员为您添加相应权限的角色，具体操作方法请参见 OCP 对应版本的《用户指南》文档中的 **编辑用户** 。
   
@@ -18,7 +18,7 @@ OCP 提供了替换 OBServer 节点的功能。集群节点的替换操作常用
 
 2. 在 **集群** 页面的集群列表中单击集群名，进入集群详情页面。
 
-3. 在 **OBServer 列表** 部分，单击需要替换的 OBServer 操作列的 **替换** 。
+3. 在 **OBServer 列表** 部分，单击需要替换的节点的 **操作** 列的 **替换** 。
 
    ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/exchange-observer.png)
 
