--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/14.manage-tenant-variables.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/14.manage-tenant-variables.md
@@ -79,7 +79,7 @@ obclient> SELECT * FROM INFORMATION_SCHEMA.SESSION_VARIABLES WHERE VARIABLE_NAME
   SET GLOBAL VARIABLE_NAME = 'VALUE';
   ```
 
-  其中，设置 Global 级别变量要求当前用户拥有 `SUPER` 权限或 `ALTER SYSTEM` 权限。
+  其中，MySQL 模式下设置 Global 级别变量要求当前用户拥有 `SUPER` 权限或 `ALTER SYSTEM` 权限。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
