根据华庭和虞舜的修改了部分文档

--- a/zh-CN/6.manage/6.backup-and-recovery/1.flashback/1.flashback-table.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/1.flashback/1.flashback-table.md
@@ -1,12 +1,12 @@
 # 闪回表
 
-表进入回收站后，可以根据业务需要通过 `FLASHBACK` 语句闪回表。
+当表被用户误删除的时候，可以通过回收站功能，从回收站中恢复误删除的表。
 
 ## 注意事项
 
 * 通过 `FLASHBACK` 语句恢复表时，表上的索引也会被恢复。
 
-* 闪回表时可修改待闪回对象的名称，但是不能与已有对象重名。
+* 闪回表时可修改待闪回表的名称，但是不能与已有表重名。
 
 * 对于 MySQL 租户，从回收站中闪回表前，如果该表从属的数据库已删除，则需要先恢复数据库再恢复表。恢复数据库的相关操作请参见 [闪回数据库对象](../../../7.reference/2.administrator-guide/5.backup-and-recovery/1.flashback/2.database-table-and-index-recycle-bin.md)。
 
