--- a/zh-CN/6.manage/6.backup-and-recovery/1.flashback/3.recyclebin-management/1.objects-supported-by-recycle-bin.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/1.flashback/3.recyclebin-management/1.objects-supported-by-recycle-bin.md
@@ -1,10 +1,8 @@
 # 回收站支持的对象
 
-回收站主要用于存储用户删除的数据库和表等信息。
+回收站是一种重要的数据管理功能，主要用于存储用户删除的数据库对象，例如数据库、表和索引。在删除数据库对象后，它仍然占据着物理空间，直到您手动执行清除操作或者被数据库系统定期删除。
 
-回收站在原理上说就是一个数据字典表，放置用户删除的数据库对象信息。用户删除的东西被放入回收站后，其实仍然占据着物理空间，除非您手动进行清除（ `PURGE` ）或者对象定期被数据库系统删除。
-
-在当前版本中，支持进入回收站的对象有索引、表、库和租户，各模式回收站对象的支持情况如下表所示。
+目前，回收站支持存储索引、表、数据库和租户等对象。支持情况详见如下表。
 
 |   **模式**   | **索引（Index）** | **表（Table）** | **数据库（Database）** | **租户（Tenant）** |
 |--------------|-------------------|-----------------|-----------------------|--------------------|
