--- a/zh-CN/6.manage/6.backup-and-recovery/1.flashback/3.recyclebin-management/2.turn-the-recycle-bin-on-or-off.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/1.flashback/3.recyclebin-management/2.turn-the-recycle-bin-on-or-off.md
@@ -4,7 +4,7 @@
 
 ## 注意事项
 
-仅 `sys` 租户可以开启或关闭租户回收站功能。MySQL 用户租户只能开启数据库、表和索引的回收站功能；Oracle 用户租户只能开启表和索引的回收站功能。
+`sys` 租户可以开启或关闭租户、数据库、表和索引的回收站功能。MySQL 用户租户只能开启数据库、表和索引的回收站功能；Oracle 用户租户只能开启表和索引的回收站功能。
 
 ## 操作步骤
 
