--- a/zh-CN/6.manage/6.backup-and-recovery/1.flashback/3.recyclebin-management/4.purge-the-recycle-bin.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/1.flashback/3.recyclebin-management/4.purge-the-recycle-bin.md
@@ -60,7 +60,7 @@
      obclient [(none)]> PURGE TENANT tenant_name;
      ```
 
-     其中，`tenant_name` 可以使用原始名称，也可以使用回收站中的名称。使用原始名称时，如果回收站中当前有相同的多个原始名称，则清除的是最早进入回收站中的租户。
+     其中，`tenant_name` 可以使用原始名称，也可以使用回收站中的名称。使用原始名称时，如果回收站中当前有相同的多个原始名称，则清除的是最早进入回收站中的租户。建议使用对象在回收站中的名称。
 
      示例如下：
 
@@ -78,7 +78,7 @@
      obclient> PURGE DATABASE object_name;
      ```
 
-     `object_name` 表示该 Schema 对象在回收站中的名称。
+     `object_name` 表示该 Schema 对象在回收站中的名称，不支持使用原始名称。
 
      示例如下：
 
@@ -92,7 +92,7 @@
      obclient> PURGE TABLE object_name;
      ```
 
-     `object_name` 表示该 Schema 对象在回收站中的名称。
+     `object_name` 表示该 Schema 对象在回收站中的名称，不支持使用原始名称。
 
      示例如下：
 
@@ -106,7 +106,7 @@
      obclient> PURGE INDEX object_name;
      ```
 
-     `object_name` 表示该 Schema 对象在回收站中的名称。
+     `object_name` 表示该 Schema 对象在回收站中的名称，不支持使用原始名称。
 
      示例如下：
 
@@ -120,7 +120,7 @@
      obclient [(none)]> PURGE RECYCLEBIN;
      ```
 
-     `object_name` 表示该 Schema 对象在回收站中的名称。
+     `object_name` 表示该 Schema 对象在回收站中的名称，不支持使用原始名称。
 
 4. 命令执行成功后，可以再次执行 `SHOW RECYCLEBIN` 语句，确认回收站中的对象是否成功清理。
 
