--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/4.view-the-restore-progress.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/4.view-the-restore-progress.md
@@ -49,7 +49,7 @@
                     RESTORE_OPTION: pool_list=small_pool_2&primary_zone=z1
                        RESTORE_SCN: 1658285759724047000
                RESTORE_SCN_DISPLAY: 2022-06-1 02:55:59.724047
-                            STATUS: RESTORE_WAIT_LS
+                            STATUS: RESTORING
                    START_TIMESTAMP: 2022-06-1 10:58:33.689560
                    BACKUP_SET_LIST: file:///data/nfs/backup/data/backup_set_1_full
                  BACKUP_PIECE_LIST: file:///data/nfs/backup/archive/2_1_2,file:///data/nfs/backup/archive/2_1_3
@@ -79,11 +79,7 @@
 
    * 被恢复租户：
 
-      * `RESTORE_PRE` : 恢复前准备阶段，在设置了加密的情况下，系统会自动设置加密信息,。设置完成, 状态变更为 `RESTORE_CREATE_INIT_LS`；设置失败，则状态变更为 `RESTORE_FAIL`。
-
-      * `RESTORE_CREATE_INIT_LS` : 创建日志流阶段。 创建完成, 状态变更为: `RESTORE_WAIT_LS`；创建失败，状态变更为 `RESTORE_FAIL`。
-
-      * `RESTORE_WAIT_LS` : 等待日志流恢复完成。恢复完成, 状态变更为: `POST_CHECK`；恢复失败，状态变更为 `RESTORE_FAIL`。
+      * `RESTORING` : 租户数据恢复中。恢复完成，状态会变更为 `POST_CHECK`；如果恢复失败，状态会变更为 `RESTORE_FAIL`。
 
       * `POST_CHECK`: 检查租户角色，恢复成备库。操作完成，状态变更为: `UPGRADE`； 操作失败，状态变更为 `RESTORE_FAIL`。
 
