--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/5.view-the-restore-history.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/5.view-the-restore-history.md
@@ -76,7 +76,7 @@
                          COMMENT: NULL
    ```
 
-    `CDB_OB_RESTORE_HISTORY` 视图中各字段基本与 `CDB_OB_RESTORE_HISTORY` 相对应。其中， `COMMENT` 用于记录任务失败时的相关错误信息。
+    `CDB_OB_RESTORE_HISTORY` 视图中各字段基本与 `CDB_OB_RESTORE_PROGRESS` 相对应。其中， `COMMENT` 用于记录任务失败时的相关错误信息。
 
     如果恢复失败，您可以通过删除租户的方式来取消本次恢复，具体操作请参见 [取消恢复](3.cancel-a-restore.md)。
 
