根据炎风和金玉的建议修改

--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/4.data-backup/2.initiate-full-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/4.data-backup/2.initiate-full-data-backup.md
@@ -1,10 +1,10 @@
-# 发起数据备份
+# 发起全量数据备份
 
 日志归档开始后，您可以发起数据备份。
 
 ## 前提条件
 
-在执行数据备份前，您需要进行以下事项：
+在执行全量数据备份前，您需要进行以下事项：
 
 * 确认当前已开启日志归档，仅当日志归档任务的 `STATUS` 为 `DOING` 时，才能开始数据备份。
 
