--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/4.data-backup/3.initiate-incremental-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/4.data-backup/3.initiate-incremental-data-backup.md
@@ -1,10 +1,10 @@
-# 发起增量备份
+# 发起增量数据备份
 
 增量备份是从上一个全量备份开始，备份所有修改过的宏块。
 
 ## 前提条件
 
-在执行增量备份前，请确保已经有全量备份存在。如果无全量备份，请先发起全量备份，相关操作请参见 [发起数据备份](2.initiate-full-data-backup.md)。
+在执行增量数据备份前，请确保已经有全量数据备份存在。如果无全量数据备份，请先发起全量数据备份，相关操作请参见 [发起全量数据备份](2.initiate-full-data-backup.md)。
   
 ## 发起增量备份
 
