--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/4.data-backup/4.stop-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/4.data-backup/4.stop-data-backup.md
@@ -1,6 +1,12 @@
 # 停止备份
 
-发起数据备份后，您可以停止正在运行的备份任务。
+发起数据备份后，您可以停止正在运行的备份任务。停止备份后，如果开启了自动清理备份的功能，则备份清理任务会及时清理不完整的备份。
+
+## 前提条件
+
+由于停止正在运行的备份任务后，系统会产生一些不完整的备份数据。建议您提前开启自动清理备份功能，及时清理不完整的备份，以免占用资源。开启自动清理备份功能的相关操作，请参见 [自动清理过期备份](../5.clear-backup-data/1.cleaning-up-backed-up-data-automatically.md)。
+
+## 背景信息
 
 假设当前集群中有 3 个租户，分别是 `sys` ，`mysql_tenant` 和 `oracle_tenant` ，且租户 `mysql_tenant` 和 `oracle_tenant` 都正在进行数据备份。
 
