--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/4.data-backup/1.preparation-before-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/4.data-backup/1.preparation-before-data-backup.md
@@ -65,10 +65,11 @@
 3. 配置成功后，`sys` 租户可通过视图 `CDB_OB_BACKUP_PARAMETER` 查看当前集群中各租户的备份路径等信息。
 
    ```sql
-   obclient> SELECT * FROM cdb_ob_backup_parameter\G
+   obclient> SELECT * FROM oceanbase.CDB_OB_BACKUP_PARAMETER\G
+   *************************** 1. row ***************************
    TENANT_ID: 1002
-   NAME: data_backup_dest
-   VALUE: file:///data/nfs/backup/data
+        NAME: data_backup_dest
+       VALUE: file:///data/nfs/backup/data
    ```
 
 ## 注意事项及说明
