--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/5.clear-backup-data/2.stop-cleaning-backup-data.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/5.clear-backup-data/2.stop-cleaning-backup-data.md
@@ -90,6 +90,10 @@
 
    根据查询结果，当视图中已无对应租户的记录时，表示该租户的清理策略已删除成功。
 
+### 后续处理
+
+删除清理策略后，为避免因备份文件未及时清理而导致的磁盘空间满最终影响到备份操作，请在删除清理策略后及时设置新的清理策略。设置清理策略的具体操作参见 [自动清理过期备份](1.cleaning-up-backed-up-data-automatically.md)。
+
 ## 取消清理任务
 
 ### 用户租户下取消正在执行的清理任务
@@ -200,3 +204,5 @@
       ```
 
       如果 `STATUS` 对应的值为 `COMPLETED` 或 `FAILED` 或 `CANCELED`，则表示清理任务已停止。
+
+## 
