根据金玉的意见提交修改

--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/6.failover-standby-tenant.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/6.failover-standby-tenant.md
@@ -6,7 +6,9 @@
 
 请确认恢复操作已成功，查看恢复结果的相关操作请参见 [查看恢复结果](5.view-the-restore-history.md)。
 
-## 操作步骤
+## 系统租户将备租户转为主租户
+
+系统租户可以将系统内的备租户转为主租户。
 
 1. 使用 `root` 用户登录集群的 `sys` 租户。
 
@@ -30,3 +32,22 @@
    ```
 
    命令中各参数的说明请参见 [恢复参数](7.parameters-of-the-restore.md)。
+
+## 用户租户将备租户转为主租户
+
+用户租户可以将本租户从备租户转为主租户。
+
+1. 用户租户的租户管理员登录数据库。
+
+   <main id="notice" type='explain'>
+        <h4>说明</h4>
+        <p>MySQL 模式的管理员用户为 <code> root</code> 用户，Oracle 模式的管理员用户为 <code>SYS</code> 用户。</p>
+   </main>
+
+2. 执行以下语句，进行备切主操作。
+
+   语句如下：
+
+   ```sql
+   obclient [(none)]> ALTER SYSTEM ACTIVATE STANDBY;
+   ```
