根据充容的修改同步

--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/7.parameters-of-the-restore.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/7.parameters-of-the-restore.md
@@ -28,7 +28,6 @@
 
 |         参数        |     描述      |
 |--------------------|--------------|
-|table_name_list     | 指定恢复租户中特定表格的数据，其中表名需要包含表所属的数据库|
 | dest_tenant_name   | 指恢复的新租户的名称。 |
 | uri                | 指备份时设置的数据备份路径 `backup_data_dest` 与日志归档路径 `log_archive_dest`, 该值至少包含一条数据备份路径和一条日志归档路径, 路径间用 `,` 分隔。    |
 | timestamp          | 指恢复指定时间戳, 恢复到该时间点为止, 且包括该 `timestamp` 位点, 指定 `timestamp` 必须以 `=` 连接。`timestamp` 仅支持 `YYYY-MM-DD HH24:MI:SS.FF` 格式, 精确到纳秒。|
@@ -39,6 +38,21 @@
 ### timestamp 与 scn 选取约束
 
 `timestamp` 与 `scn` 需满足区间 \[数据备份最小恢复位点(`MIN_RESTORE_SCN`), 日志归档最大归档位点(`CHECKPOINT_SCN`)\]。
+
+## 恢复性能相关
+
+### 命令
+
+```sql
+obclient [(none)]> ALTER SYSTEM SET ha_low_thread_score =10 TENANT = mysql;
+```
+
+### 参数解释
+
+|         参数                |     描述                                        |
+|-----------------------------|------------------------------------------------|
+| ha_low_thread_score         |  设置恢复任务队列使用线程资源的权重值。            |
+
 
 ## Failover 命令相关
 
