--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/2.initiate-the-tenant-restore.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/2.initiate-the-tenant-restore.md
@@ -106,4 +106,16 @@
          obclient [(none)]> ALTER SYSTEM RESTORE mysql FROM 'oss://oceanbase-test-bucket/backup/data/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx,oss://oceanbase-test-bucket/backup/archive/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx' UNTIL TIME='2022-06-1 00:00:00' WITH 'pool_list=restore_pool';
          ```
 
-   发起恢复任务后，您可以通过视图查看恢复的进度和结果，具体操作请参见 [查看恢复进度](4.view-the-restore-progress.md)。
+4. 配置恢复任务的后台调度权重，以免影响恢复的速度。
+
+   租户级配置项 `ha_low_thread_score` 用于设置高可用低优先级线程的当前工作线程数。默认值为 0，取值范围为 [0, 100]，建议修改为 10。有关配置项 `ha_low_thread_score` 的更多介绍，请参见 [ha_low_thread_score](../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/43.ha_low_thread_score.md)。
+
+   语句如下：
+
+   ```sql
+   obclient [(none)]> ALTER SYSTEM SET ha_low_thread_score =10 TENANT = mysql;
+   ```
+
+## 后续操作
+
+发起恢复任务后，您可以通过视图查看恢复的进度和结果，具体操作请参见 [查看恢复进度](4.view-the-restore-progress.md)。
