根据充容的要求修改

--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/4.data-backup/8.views-of-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/4.data-backup/8.views-of-data-backup.md
@@ -18,7 +18,7 @@ OceanBase 数据库支持通过各视图查看备份的进度与结果。
 | PLUS_ARCHIVELOG                  | varchar(4096)       | 是否开启日志补齐功能：<ul><li>ON：开启日志补齐功能</li><li>OFF：关闭日志补齐功能</li></ul> |
 | BACKUP_TYPE                      | varchar(4096)       | 备份类型：<ul><li>D：表示全量备份</li><li>I：表示增量备份</li></ul>|
 | JOB_LEVEL                        | varchar(4096)       | Job 任务发起的级别：<ul><li>CLUSTER：sys 租户发起所有租户的备份任务</li><li>SYS_TENANT：sys 租户发起的指定租户的备份任务</li><li>USER_TENANT：普通租户发起自身的备份</li></ul>  |
-| ENCRYPTION_MOD                   | varchar(4096)       | 加密模式：<ul><li>None：表示不加密 </li><li>Password：表示只使用密码保护 </li><li>Password Encryption ：表示加密，并且使用密码保护 </li><li >Transparent Encryption：表示使用 TDE 加密 </li><li>Dual mode Encryption ：表示使用 TDE 加密以及密码保护</li></ul></br>目前仅支持 None 和 Password 两种模式。 |
+| ENCRYPTION_MOD                   | varchar(4096)       | 加密模式：<ul><li>`None`：表示不加密 </li><li>`Password`：表示只使用密码保护</li></ul> |
 | PASSWD                           | varchar(4096)       | 备份集的加密密码 |
 | START_TIMESTAMP                  | timestamp(6)        | Job 级备份任务的开始时间 |
 | END_TIMESTAMP                    | timestamp(6)        | Job 级备份任务的结束时间 |
