--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/7.parameters-of-the-restore.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/7.parameters-of-the-restore.md
@@ -54,7 +54,7 @@ obclient [(none)]> ALTER SYSTEM SET ha_low_thread_score =10 TENANT = mysql;
 | ha_low_thread_score         |  设置恢复任务队列使用线程资源的权重值。            |
 
 
-## Failover 命令相关
+## Active 命令相关
 
 ### 命令
 
