--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/5.clear-backup-data/6.views-of-cleaning-up-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/5.clear-backup-data/6.views-of-cleaning-up-backup.md
@@ -276,7 +276,7 @@
 |------|-------|-------|
 | TENANT_ID                 |  bigint(20) |    租户 ID |
 | POLICY_NAME               |  varchar(256) |    清理策略名 |
-| RECOVERY_WINDOW           |  varchar(64) |   可恢复时间窗口，默认值为 `0` |
+| RECOVERY_WINDOW           |  varchar(64) |   可恢复时间窗口 |
 
 ## DBA_OB_BACKUP_DELETE_POLICY
 
