--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/3.log-archive/3.initiate-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/3.log-archive/3.initiate-log-archive.md
@@ -4,7 +4,7 @@
 
 ## 前提条件
 
-开启日志归档前，请确认待开启日志归档的租户的日志归档状态机处于 `STOP` 状态。日志归档状态机相关说明请参见 [日志归档状态机介绍](4.status-of-different-logs.md)。
+开启日志归档前，请确认待开启日志归档的租户的日志归档状态机处于 `STOP` 状态。日志归档状态机相关说明请参见 [日志归档概述](1.overview-of-log-archive.md)。
 
 ## 背景信息
 
@@ -45,7 +45,7 @@
 
     命令执行成功后，在本示例中，系统会对集群中的 `mysql_tenant` 租户发起日志归档。
 
-开启日志归档后，系统会按照 Piece 来组织和管理归档日志数据。有关 Piece 的详细介绍请参见 [Piece](5.concept-of-log-backup-piece.md)。
+开启日志归档后，系统会按照 Piece 来组织和管理归档日志数据。有关 Piece 的详细介绍请参见 [日志归档概述](1.overview-of-log-archive.md)。
 
 ## 用户租户发起日志归档
 
@@ -63,8 +63,8 @@
 
 ## 相关文档
 
-* [关闭日志归档](3.stop-log-backup.md)
+* [关闭日志归档](4.stop-log-archive.md)
 
-* [查看归档进度](6.view-log-backup-progress.md)
+* [查看归档进度](6.view-log-archive-progress.md)
 
-* [查看归档结果](7.view-log-backup-history.md)
+* [查看归档结果](7.view-log-archive-history.md)
