--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/4.data-backup/8.views-of-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/4.data-backup/8.views-of-data-backup.md
@@ -6,156 +6,156 @@ OceanBase 数据库支持通过各视图查看备份的进度与结果。
 
 `oceanbase.CDB_OB_BACKUP_JOBS` 用于展示各租户 Job 级数据备份的进度。
 
-|  字段 | 类型  |  描述 |
-|----------------------------------|---------------------|--------------|
-| TENANT_ID                        | bigint(20)          | 执行备份任务的租户 ID|
-| JOB_ID                           | bigint(20)          | 备份任务所属的 job_id, 对应一次备份任务 |
-| INCARNATION                      | bigint(20)          | 分身 ID |
-| BACKUP_SET_ID                    | bigint(20)          | 备份集 ID |
-| INITIATOR_TENANT_ID              | varchar(65536)      | 发起此次 Job 的租户 ID |
-| INITIATOR_JOB_ID                 | bigint(20)          | 发起此次 Job 的租户所属的 job_id|
-| EXECUTOR_TENANT_ID               | varchar(65536)      | 此次 Job 对应的需要备份的 tenant_id  |
-| PLUS_ARCHIVELOG                  | varchar(4096)       | 是否开启日志补齐功能：<ul><li>ON：开启日志补齐功能</li><li>OFF：关闭日志补齐功能</li></ul> |
-| BACKUP_TYPE                      | varchar(4096)       | 备份类型：<ul><li>D：表示全量备份</li><li>I：表示增量备份</li></ul>|
-| JOB_LEVEL                        | varchar(4096)       | Job 任务发起的级别：<ul><li>CLUSTER：sys 租户发起所有租户的备份任务</li><li>SYS_TENANT：sys 租户发起的指定租户的备份任务</li><li>USER_TENANT：普通租户发起自身的备份</li></ul>  |
-| ENCRYPTION_MOD                   | varchar(4096)       | 加密模式：<ul><li>`None`：表示不加密 </li><li>`Password`：表示只使用密码保护</li></ul> |
-| PASSWD                           | varchar(4096)       | 备份集的加密密码 |
-| START_TIMESTAMP                  | timestamp(6)        | Job 级备份任务的开始时间 |
-| END_TIMESTAMP                    | timestamp(6)        | Job 级备份任务的结束时间 |
-| STATUS                           | varchar(4096)       | 备份任务的状态 |
-| RESULT                           | bigint(20)          | 任务错误码 |
-| COMMENT                          | longtext            | 错误码描述 |
+|  字段                             |  描述 |
+|----------------------------------|--------------|
+| TENANT_ID                        | 执行备份任务的租户 ID|
+| JOB_ID                           | 备份任务所属的 job_id, 对应一次备份任务 |
+| INCARNATION                      | 分身 ID |
+| BACKUP_SET_ID                    | 备份集 ID |
+| INITIATOR_TENANT_ID              | 发起此次 Job 的租户 ID |
+| INITIATOR_JOB_ID                 | 发起此次 Job 的租户所属的 job_id|
+| EXECUTOR_TENANT_ID               | 此次 Job 对应的需要备份的 tenant_id  |
+| PLUS_ARCHIVELOG                  | 是否开启日志补齐功能：<ul><li>ON：开启日志补齐功能</li><li>OFF：关闭日志补齐功能</li></ul> |
+| BACKUP_TYPE                      | 备份类型：<ul><li>D：表示全量备份</li><li>I：表示增量备份</li></ul>|
+| JOB_LEVEL                        | Job 任务发起的级别：<ul><li>CLUSTER：sys 租户发起所有租户的备份任务</li><li>SYS_TENANT：sys 租户发起的指定租户的备份任务</li><li>USER_TENANT：普通租户发起自身的备份</li></ul>  |
+| ENCRYPTION_MOD                   | 加密模式：<ul><li>`None`：表示不加密 </li><li>`Password`：表示只使用密码保护</li></ul> |
+| PASSWD                           | 备份集的加密密码 |
+| START_TIMESTAMP                  | Job 级备份任务的开始时间 |
+| END_TIMESTAMP                    | Job 级备份任务的结束时间 |
+| STATUS                           | 备份任务的状态 |
+| RESULT                           | 任务错误码 |
+| COMMENT                          | 错误码描述 |
 
 ## CDB_OB_BACKUP_JOB_HISTORY
 
 `oceanbase.CDB_OB_BACKUP_JOB_HISTORY` 用于展示各租户 Job 级数据备份的历史信息。
 
-|  字段 | 类型  |  描述 |
-|----------------------------------|---------------------|--------------|
-| TENANT_ID                        | bigint(20)          | 执行备份任务的租户 ID |
-| JOB_ID                           | bigint(20)          | 备份任务所属的 job_id, 对应一次备份任务 |
-| INCARNATION                      | bigint(20)          | 分身 ID |
-| BACKUP_SET_ID                    | bigint(20)          | 备份集 ID |
-| INITIATOR_TENANT_ID              | varchar(65536)      | 发起此次 Job 的租户 ID |
-| INITIATOR_JOB_ID                 | bigint(20)          | 发起此次 Job 的租户所属的 job_id |
-| EXECUTOR_TENANT_ID               | varchar(65536)      | 此次 Job 对应的需要备份的 tenant_id  |
-| PLUS_ARCHIVELOG                  | varchar(4096)       | 是否开启日志补齐功能：<ul><li>ON：开启日志补齐功能</li><li>OFF：关闭日志补齐功能</li></ul> |
-| BACKUP_TYPE                      | varchar(4096)       | 备份类型：<ul><li>D：表示全量备份</li><li>I：表示增量备份</li></ul>|
-| JOB_LEVEL                        | varchar(4096)       | Job 任务发起的级别：<ul><li>CLUSTER：sys 租户发起所有租户的备份任务</li><li>SYS_TENANT：sys 租户发起的指定租户的备份任务</li><li>USER_TENANT：普通租户发起自身的备份</li></ul> |
-| ENCRYPTION_MOD                   | varchar(4096)       |  加密模式：<ul><li>None：表示不加密 </li><li>Password：表示只使用密码保护 </li><li>Password Encryption ：表示加密，并且使用密码保护 </li><li >Transparent Encryption：表示使用 TDE 加密 </li><li>Dual mode Encryption ：表示使用 TDE 加密以及密码保护</li></ul></br>目前仅支持 None 和 Password 两种模式。|
-| PASSWD                           | varchar(4096)       | 备份集的加密密码 |
-| START_TIMESTAMP                  | timestamp(6)        | Job 级备份任务的开始时间 |
-| END_TIMESTAMP                    | timestamp(6)        | Job 级备份任务的结束时间 |
-| STATUS                           | varchar(4096)       | 备份任务的状态 |
-| RESULT                           | bigint(20)          | 任务错误码 |
-| COMMENT                          | longtext            | 错误码描述 |
+|  字段                   |  描述 |
+|----------------------------------|--------------|
+| TENANT_ID                        | 执行备份任务的租户 ID |
+| JOB_ID                           | 备份任务所属的 job_id, 对应一次备份任务 |
+| INCARNATION                      | 分身 ID |
+| BACKUP_SET_ID                    | 备份集 ID |
+| INITIATOR_TENANT_ID              | 发起此次 Job 的租户 ID |
+| INITIATOR_JOB_ID                 | 发起此次 Job 的租户所属的 job_id |
+| EXECUTOR_TENANT_ID               | 此次 Job 对应的需要备份的 tenant_id  |
+| PLUS_ARCHIVELOG                  | 是否开启日志补齐功能：<ul><li>ON：开启日志补齐功能</li><li>OFF：关闭日志补齐功能</li></ul> |
+| BACKUP_TYPE                      | 备份类型：<ul><li>D：表示全量备份</li><li>I：表示增量备份</li></ul>|
+| JOB_LEVEL                        | Job 任务发起的级别：<ul><li>CLUSTER：sys 租户发起所有租户的备份任务</li><li>SYS_TENANT：sys 租户发起的指定租户的备份任务</li><li>USER_TENANT：普通租户发起自身的备份</li></ul> |
+| ENCRYPTION_MOD                   |  加密模式：<ul><li>None：表示不加密 </li><li>Password：表示只使用密码保护 </li><li>Password Encryption ：表示加密，并且使用密码保护 </li><li >Transparent Encryption：表示使用 TDE 加密 </li><li>Dual mode Encryption ：表示使用 TDE 加密以及密码保护</li></ul></br>目前仅支持 None 和 Password 两种模式。|
+| PASSWD                           | 备份集的加密密码 |
+| START_TIMESTAMP                  | Job 级备份任务的开始时间 |
+| END_TIMESTAMP                    | Job 级备份任务的结束时间 |
+| STATUS                           | 备份任务的状态 |
+| RESULT                           | 任务错误码 |
+| COMMENT                          | 错误码描述 |
 
 ## CDB_OB_BACKUP_TASKS
 
 `oceanbase.CDB_OB_BACKUP_TASKS` 用于展示各租户 Task 级数据备份任务的进度。
 
-|  字段 | 类型  |  描述 |
-|----------------------------------|---------------------|--------------|
-| TENANT_ID                        | bigint(20)          | 执行备份任务的租户 ID |
-| TASK_ID                          | bigint(20)          | Task 级备份任务的 ID，对应一个备份集的任务 |
-| JOB_ID                           | bigint(20)          | Task 级备份任务所属的 job_id, 对应一次备份任务 |
-| INCARNATION                      | bigint(20)          | 分身 ID |
-| BACKUP_SET_ID                    | bigint(20)          | Task 对应的备份集 ID |
-| START_TIMESTAMP                  | timestamp(6)        | Task 任务的发起时间 |
-| END_TIMESTAMP                    | timestamp(6)        | Task 任务的结束时间 |
-| STATUS                           | varchar(4096)       | 备份任务状态 |
-| START_SCN                        | bigint(20)          | 备份任务起始位点 |
-| END_SCN                          | bigint(20)          | 备份任务结束位点 |
-| USER_LS_START_SCN                | bigint(20)          | 用户日志流起始位点 |
-| ENCRYPTION_MODE                  | varchar(4096)       | 加密模式：<ul><li>None：表示不加密 </li><li>Password：表示只使用密码保护 </li><li>Password Encryption ：表示加密，并且使用密码保护 </li><li >Transparent Encryption：表示使用 TDE 加密 </li><li>Dual mode Encryption ：表示使用 TDE 加密以及密码保护</li></ul></br>目前仅支持 None 和 Password 两种模式。 |
-| PASSWD                           | varchar(4096)       | 备份集的加密密码 |
-| INPUT_BYTES                      | bigint(20)          | 输入字节数 |
-| OUTPUT_BYTES                     | bigint(20)          | 输出字节数 |
-| OUTPUT_RATE_BYTES                | bigint(20)          | 输出速率 |
-| EXTRA_META_BYTES                 | bigint(20)          | 元数据的额外字节数 |
-| TABLET_COUNT                     | bigint(20)          | 总分区个数 |
-| FINISH_TABLET_COUNT              | bigint(20)          | 完成备份的分区个数 |
-| MACRO_BLOCK_COUNT                | bigint(20)          | 宏块个数 |
-| FINISH_MACRO_BLOCK_COUNT         | bigint(20)          | 完成备份的宏块个数 |
-| FILE_COUNT                       | bigint(20)          | 文件个数 |
-| META_TURN_ID                     | bigint(20)          | 备份元数据的轮次 |
-| DATA_TURN_ID                     | bigint(20)          | 备份数据的轮次 |
-| RESULT                           | bigint(20)          | 错误码 |
-| COMMENT                          | varchar(4096)       | 错误码描述 |
-| PATH                             | varchar(4096)       | 备份路径信息 |
+|  字段                             |  描述 |
+|----------------------------------|--------------|
+| TENANT_ID                        | 执行备份任务的租户 ID |
+| TASK_ID                          | Task 级备份任务的 ID，对应一个备份集的任务 |
+| JOB_ID                           | Task 级备份任务所属的 job_id, 对应一次备份任务 |
+| INCARNATION                      | 分身 ID |
+| BACKUP_SET_ID                    | Task 对应的备份集 ID |
+| START_TIMESTAMP                  | Task 任务的发起时间 |
+| END_TIMESTAMP                    | Task 任务的结束时间 |
+| STATUS                           | 备份任务状态 |
+| START_SCN                        | 备份任务起始位点 |
+| END_SCN                          | 备份任务结束位点 |
+| USER_LS_START_SCN                | 用户日志流起始位点 |
+| ENCRYPTION_MODE                  | 加密模式：<ul><li>None：表示不加密 </li><li>Password：表示只使用密码保护 </li><li>Password Encryption ：表示加密，并且使用密码保护 </li><li >Transparent Encryption：表示使用 TDE 加密 </li><li>Dual mode Encryption ：表示使用 TDE 加密以及密码保护</li></ul></br>目前仅支持 None 和 Password 两种模式。 |
+| PASSWD                           | 备份集的加密密码 |
+| INPUT_BYTES                      | 输入字节数 |
+| OUTPUT_BYTES                     | 输出字节数 |
+| OUTPUT_RATE_BYTES                | 输出速率 |
+| EXTRA_META_BYTES                 | 元数据的额外字节数 |
+| TABLET_COUNT                     | 总分区个数 |
+| FINISH_TABLET_COUNT              | 完成备份的分区个数 |
+| MACRO_BLOCK_COUNT                | 宏块个数 |
+| FINISH_MACRO_BLOCK_COUNT         | 完成备份的宏块个数 |
+| FILE_COUNT                       | 文件个数 |
+| META_TURN_ID                     | 备份元数据的轮次 |
+| DATA_TURN_ID                     | 备份数据的轮次 |
+| RESULT                           | 错误码 |
+| COMMENT                          | 错误码描述 |
+| PATH                             | 备份路径信息 |
 
 ## CDB_OB_BACKUP_TASK_HISTORY
 
 `oceanbase.CDB_OB_BACKUP_TASK_HISTORY` 用于展示各租户 Task 级数据备份任务的历史信息。
 
-|  字段 | 类型  |  描述 |
-|----------------------------------|---------------------|--------------|
-| TENANT_ID                        | bigint(20)          | 执行备份任务的租户 ID |
-| TASK_ID                          | bigint(20)          | Task 级备份任务的 ID，对应一个备份集的任务  |
-| JOB_ID                           | bigint(20)          | Task 级备份任务所属的 job_id, 对应一次备份任务 |
-| INCARNATION                      | bigint(20)          | 分身 ID  |
-| BACKUP_SET_ID                    | bigint(20)          | Task 对应的备份集 ID  |
-| START_TIMESTAMP                  | timestamp(6)        | Task 任务的发起时间  |
-| END_TIMESTAMP                    | timestamp(6)        | Task 任务的结束时间  |
-| STATUS                           | varchar(4096)       | Task 任务的状态  |
-| START_SCN                        | bigint(20)          | 备份任务的起始位点  |
-| END_SCN                          | bigint(20)          | 备份任务的结束位点  |
-| USER_LS_START_SCN                | bigint(20)          | 用户日志流的起始位点  |
-| ENCRYPTION_MODE                  | varchar(4096)       | 加密模式：<ul><li>None：表示不加密 </li><li>Password：表示只使用密码保护 </li><li>Password Encryption ：表示加密，并且使用密码保护 </li><li >Transparent Encryption：表示使用 TDE 加密 </li><li>Dual mode Encryption ：表示使用 TDE 加密以及密码保护</li></ul></br>目前仅支持 None 和 Password 两种模式。 |
-| PASSWD                           | varchar(4096)       | 备份集的加密密码  |
-| INPUT_BYTES                      | bigint(20)          | 输入字节数  |
-| OUTPUT_BYTES                     | bigint(20)          | 输出字节数  |
-| OUTPUT_RATE_BYTES                | bigint(20)          | 输出速率  |
-| EXTRA_META_BYTES                 | bigint(20)          | 元数据的额外字节数  |
-| TABLET_COUNT                     | bigint(20)          | 总分区个数  |
-| FINISH_TABLET_COUNT              | bigint(20)          | 完成备份的分区个数  |
-| MACRO_BLOCK_COUNT                | bigint(20)          | 宏块个数  |
-| FINISH_MACRO_BLOCK_COUNT         | bigint(20)          | 完成备份的宏块个数  |
-| FILE_COUNT                       | bigint(20)          | 文件个数  |
-| META_TURN_ID                     | bigint(20)          | 备份元数据的轮次  |
-| DATA_TURN_ID                     | bigint(20)          | 备份数据的轮次 |
-| RESULT                           | bigint(20)          | 错误码  |
-| COMMENT                          | varchar(4096)       | 错误码描述  |
-| PATH                             | varchar(4096)       | 备份路径信息  |
+|  字段                             |  描述 |
+|----------------------------------|--------------|
+| TENANT_ID                        | 执行备份任务的租户 ID |
+| TASK_ID                          | Task 级备份任务的 ID，对应一个备份集的任务  |
+| JOB_ID                           | Task 级备份任务所属的 job_id, 对应一次备份任务 |
+| INCARNATION                      | 分身 ID  |
+| BACKUP_SET_ID                    | Task 对应的备份集 ID  |
+| START_TIMESTAMP                  | Task 任务的发起时间  |
+| END_TIMESTAMP                    | Task 任务的结束时间  |
+| STATUS                           | Task 任务的状态  |
+| START_SCN                        | 备份任务的起始位点  |
+| END_SCN                          | 备份任务的结束位点  |
+| USER_LS_START_SCN                | 用户日志流的起始位点  |
+| ENCRYPTION_MODE                  | 加密模式：<ul><li>None：表示不加密 </li><li>Password：表示只使用密码保护 </li><li>Password Encryption ：表示加密，并且使用密码保护 </li><li >Transparent Encryption：表示使用 TDE 加密 </li><li>Dual mode Encryption ：表示使用 TDE 加密以及密码保护</li></ul></br>目前仅支持 None 和 Password 两种模式。 |
+| PASSWD                           | 备份集的加密密码  |
+| INPUT_BYTES                      | 输入字节数  |
+| OUTPUT_BYTES                     | 输出字节数  |
+| OUTPUT_RATE_BYTES                | 输出速率  |
+| EXTRA_META_BYTES                 | 元数据的额外字节数  |
+| TABLET_COUNT                     | 总分区个数  |
+| FINISH_TABLET_COUNT              | 完成备份的分区个数  |
+| MACRO_BLOCK_COUNT                | 宏块个数  |
+| FINISH_MACRO_BLOCK_COUNT         | 完成备份的宏块个数  |
+| FILE_COUNT                       | 文件个数  |
+| META_TURN_ID                     | 备份元数据的轮次  |
+| DATA_TURN_ID                     | 备份数据的轮次 |
+| RESULT                           | 错误码  |
+| COMMENT                          | 错误码描述  |
+| PATH                             | 备份路径信息  |
 
 ## CDB_OB_BACKUP_SET_FILES
 
 `oceanbase.CDB_OB_BACKUP_SET_FILES` 用于展示各租户备份集信息。
 
-|    字段                  |      类型            |         描述 |
-|--------------------------|---------------------|--------------|
-| TENANT_ID                | bigint(20)          | 执行备份任务的租户ID |
-| BACKUP_SET_ID            | bigint(20)          | 备份集ID |
-| DEST_ID                  | bigint(20)          | 路径ID |
-| INCARNATION              | bigint(20)          | 分身ID |
-| BACKUP_TYPE              | varchar(64)         | 备份类型 |
-| PREV_FULL_BACKUP_SET_ID  | bigint(20)          | 当前备份集依赖的前一个全量备份集ID |
-| PREV_INC_BACKUP_SET_ID   | bigint(20)          | 当前备份集依赖的前一个增量备份集ID |
-| START_TIMESTAMP          | timestamp(6)        | 备份开始时间戳 |
-| END_TIMESTAMP            | varchar(26)         | 备份结束时间戳 |
-| STATUS                   | varchar(64)         | 备份集状态: <ul><li>`SUCCESS`：表示备份成功 </li><li>`FAILED`：表示备份失败</li></ul> |
-| FILE_STATUS              | varchar(64)         | 备份集文件状态 |
-| ELAPSED_SECONDES         | decimal(22,0)       | 备份耗时  |
-| PLUS_ARCHIVELOG          | varchar(4096)       | 是否带补齐日志  |
-| START_REPLAY_SCN         | bigint(20) unsigned | 备份集依赖的日志起点SCN |
-| START_REPLAY_SCN_DISPLAY | varchar(26)         | 备份集依赖的日志起点对应的时间戳 |
-| MIN_RESTORE_SCN          | bigint(20) unsigned | 备份集可供恢复的最小位点SCN |
-| MIN_RESTORE_SCN_DISPLAY  | varchar(26)         | 备份集恢复最小位点对应发的时间戳 |
-| INPUT_BYTES              | bigint(20)          | 输入字节数    |
-| OUTPUT_BYTES             | bigint(20)          | 输出字节数     |
-| OUTPUT_RATE_BYTES        | decimal(28,4)       | 输出速率  |
-| EXTRA_META_BYTES         | bigint(20)          | 元数据的额外字节数     |
-| TABLET_COUNT             | bigint(20)          | 总分区个数    |
-| FINISH_TABLET_COUNT      | bigint(20)          | 完成备份的分区个数      |
-| MACRO_BLOCK_COUNT        | bigint(20)          | 宏块个数     |
-| FINISH_MACRO_BLOCK_COUNT | bigint(20)          | 完成备份的宏块个数       |
-| FILE_COUNT               | bigint(20)          | 文件个数     |
-| META_TURN_ID             | bigint(20)          | 备份元数据的轮次       |
-| DATA_TURN_ID             | bigint(20)          | 备份数据的轮次    |
-| RESULT                   | bigint(20)          | 错误码     |
-| COMMENT                  | varchar(4096)       | 错误码描述      |
-| ENCRYPTION_MODE          | varchar(64)         | 加密模式：<ul><li>None：表示不加密 </li><li>Password：表示只使用密码保护 </li><li>Password Encryption ：表示加密，并且使用密码保护 </li><li >Transparent Encryption：表示使用 TDE 加密 </li><li>Dual mode Encryption ：表示使用 TDE 加密以及密码保护</li></ul></br>目前仅支持 `None` 和 `Password` 两种模式。  |
-| PASSWD                   | varchar(128)        | 备份集密码     |
-| TENANT_COMPATIBLE        | varchar(4096)       | 租户版本号     |
-| BACKUP_COMPATIBLE        | bigint(20)          | 备份集版本号    |
-| PATH                     | varchar(4096)       | 备份路径     |
+|    字段                   |         描述 |
+|--------------------------|--------------|
+| TENANT_ID                | 执行备份任务的租户ID |
+| BACKUP_SET_ID            | 备份集ID |
+| DEST_ID                  | 路径ID |
+| INCARNATION              | 分身ID |
+| BACKUP_TYPE              | 备份类型 |
+| PREV_FULL_BACKUP_SET_ID  | 当前备份集依赖的前一个全量备份集ID |
+| PREV_INC_BACKUP_SET_ID   | 当前备份集依赖的前一个增量备份集ID |
+| START_TIMESTAMP          | 备份开始时间戳 |
+| END_TIMESTAMP            | 备份结束时间戳 |
+| STATUS                   | 备份集状态: <ul><li>`SUCCESS`：表示备份成功 </li><li>`FAILED`：表示备份失败</li></ul> |
+| FILE_STATUS              | 备份集文件状态 |
+| ELAPSED_SECONDES         | 备份耗时  |
+| PLUS_ARCHIVELOG          | 是否带补齐日志  |
+| START_REPLAY_SCN         | 备份集依赖的日志起点SCN |
+| START_REPLAY_SCN_DISPLAY | 备份集依赖的日志起点对应的时间戳 |
+| MIN_RESTORE_SCN          | 备份集可供恢复的最小位点SCN |
+| MIN_RESTORE_SCN_DISPLAY  | 备份集恢复最小位点对应发的时间戳 |
+| INPUT_BYTES              | 输入字节数    |
+| OUTPUT_BYTES             | 输出字节数     |
+| OUTPUT_RATE_BYTES        | 输出速率  |
+| EXTRA_META_BYTES         | 元数据的额外字节数     |
+| TABLET_COUNT             | 总分区个数    |
+| FINISH_TABLET_COUNT      | 完成备份的分区个数      |
+| MACRO_BLOCK_COUNT        | 宏块个数     |
+| FINISH_MACRO_BLOCK_COUNT | 完成备份的宏块个数       |
+| FILE_COUNT               | 文件个数     |
+| META_TURN_ID             | 备份元数据的轮次       |
+| DATA_TURN_ID             | 备份数据的轮次    |
+| RESULT                   | 错误码     |
+| COMMENT                  | 错误码描述      |
+| ENCRYPTION_MODE          | 加密模式：<ul><li>None：表示不加密 </li><li>Password：表示只使用密码保护 </li><li>Password Encryption ：表示加密，并且使用密码保护 </li><li >Transparent Encryption：表示使用 TDE 加密 </li><li>Dual mode Encryption ：表示使用 TDE 加密以及密码保护</li></ul></br>目前仅支持 `None` 和 `Password` 两种模式。  |
+| PASSWD                   | 备份集密码     |
+| TENANT_COMPATIBLE        | 租户版本号     |
+| BACKUP_COMPATIBLE        | 备份集版本号    |
+| PATH                     | 备份路径     |
