--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/2.initiate-the-tenant-restore.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/2.initiate-the-tenant-restore.md
@@ -1,4 +1,4 @@
-# 执行全量恢复
+# 执行物理恢复
 
 本节主要介绍如何通过命令的方式进行租户级物理恢复，目前 OceanBase 数据库支持租户级别的基于时间点的全量恢复。
 
@@ -119,3 +119,9 @@
 ## 后续操作
 
 发起恢复任务后，您可以通过视图查看恢复的进度和结果，具体操作请参见 [查看恢复进度](4.view-the-restore-progress.md)。
+
+物理恢复流程与物理备库统一，物理恢复后的租户为备租户，后续该租户可作为备租户提供相关服务，也可转为主租户提供服务。将备租户转为主租户的详细操作请参见 [备租户转为主租户](6.active-standby-tenant.md)。
+
+## 相关文档
+
+更多恢复相关的介绍，请参见 [恢复架构](../../../../7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/5.backup-and-recovery/4.recovery-architecture.md)。
