--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/6.active-standby-tenant.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/6.active-standby-tenant.md
@@ -2,6 +2,10 @@
 
 恢复操作执行成功后, 恢复后的租户均为备租户，您需要通过 Active 命令将备租户转换为主租户。
 
+## 背景信息
+
+物理恢复流程与物理备库统一，物理恢复后的租户为备租户，后续该租户可作为备租户提供相关服务，也可转为主租户提供服务。
+
 ## 前提条件
 
 请确认恢复操作已成功，查看恢复结果的相关操作请参见 [查看恢复结果](5.view-the-restore-history.md)。
